@@ -1,6 +1,7 @@
 enum
 lazyList
 extString
+extNum
 extNativeint
 unzip
 extInt64
@@ -112,6 +113,8 @@ Batlib_Baselib_Str
 Batlib_Baselib_Lazy
 Batlib_Ocamldoc_Odoc_info
 Batlib_Extlib_PMap
+Batlib_Extlib_Int64
+Batlib_Extlib_Complex
 Batlib_Extlib_OptParse
 Batlib_Extlib_String
 Batlib_Extlib_BitSet
@@ -121,17 +124,23 @@ Batlib_Extlib_File
 Batlib_Extlib_Dllist
 Batlib_Extlib_Safeint
 Batlib_Extlib_Dynarray
+Batlib_Extlib_Immutable_array
+Batlib_Extlib_Int32
 Batlib_Extlib_Option
 Batlib_Extlib_Global
 Batlib_Extlib_Int
 Batlib_Extlib_Bool
 Batlib_Extlib_IO
+Batlib_Extlib_Big_int
 Batlib_Extlib_List
+Batlib_Extlib_Char
 Batlib_Extlib_Unzip
 Batlib_Extlib_Hashtbl
 Batlib_Extlib_Printf
 Batlib_Extlib_Base64
 Batlib_Extlib_Array
+Batlib_Extlib_Nativeint
+Batlib_Extlib_Num
 Batlib_Extlib_Std
 Batlib_Findlib_Findlib
 Batlib_Misc_Labels
