@@ -25,7 +25,7 @@
 
    Big integers (type [big_int]) are signed integers of arbitrary size. 
 
-    @document Big_int
+    @documents Big_int
 *)
   
 open Nat
